--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,18 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 boto3==1.24.52
 botocore==1.27.52
+certifi==2022.6.15
+charset-normalizer==2.1.0
 Django==4.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
+idna==3.3
 jmespath==1.0.1
 psycopg2==2.9.3
 PyJWT==2.4.0
 python-dateutil==2.8.2
 pytz==2022.2.1
+requests==2.28.1
 s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.2
